# nano-banana-mcp

./: .env.example  .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  image_utils.rs  main.rs  server.rs  tools.rs  transport.rs
